--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "gaurav-dhiman",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0 <17.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
