--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "next": "^14.2.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
